--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -570,7 +570,7 @@ section.protecting-data {
     width: 80px;
     height: 80px;
 }
-.cricle-box{
+.Form-essentials .icon-box .cricle-box{
     width: 134px;
     height: 134px;
     margin-bottom: 30px;
@@ -645,27 +645,56 @@ section.protecting-data {
     align-items: center;
     justify-content: center;
 } */
-.information .information-cricle-box{
-    width: 134px;
-    height: 134px;
+.information .information-icon-box .information-cricle-box {
+    width: 116px;
+    height: 116px;
     margin-bottom: 30px;
     border-radius: 50%;
     background: #fff;
-    box-shadow: 1px 1px 5px #fff;
+    box-shadow: 1px 1px 5px #dfdfdf inset;
     padding: 15px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+.information .information-cricle-box img {
+    width: 42px;
+    height: 42px;
+}
+.information-icon-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+.information-header .col {
+    width: 20%;
+}
+.information-cricle-box:after {
+    content: '';
+    background: #fff;
+    width: 75px;
+    height: 4px;
+    position: absolute;
+    top: 37%;
+    right: -36px;
+    box-shadow: -1px -1px 3px 0px #0000001f;
+}
+.information-header .col:last-child .information-cricle-box:after {
+  display: none;
+}
 /****** line no.574 css*******/
-.icon-box img,.information .information-cricle-box img {
+.icon-box img {
     width: 80px;
     height: 80px;
 }
 .information .information-header{
-    background: #fffffff7;
+    background: #ffffffa8;
     border-radius: 50px;
     padding: 64px 83px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 form {
     margin-top: 50px;
@@ -687,6 +716,7 @@ form {
 .Additional-box form {
     display: flex;
     flex-direction: column;
+    margin-top: 0;
 }
 .Additional-box form label {
     text-align: left;
@@ -697,6 +727,19 @@ textarea {
     border-radius: 10px;
 }
 /************************* general *************************/
+.bg-general{
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/general.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.bg-general .site-header{
+    opacity: 0.9;
+}
+.general-form .bg-lightgray-color, .Additional .bg-lightgray-color {
+    border-radius: 50px;
+    background: #ffffff8a;
+}
+
 .form-div label {
     text-align: left;
     display: block;
@@ -707,6 +750,52 @@ textarea {
     display: flex;
     justify-content: space-between;
 }
+.general-form h1 {
+    color: #fff;
+    margin-bottom: 40px;
+}
+.Additional h2 {
+    color: #fff;
+    font-size: 60px;
+    line-height: 62px;
+    margin-bottom: 40px;
+}
+.Additional-bottom-btn {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+.Additional-bottom-btn .btn {
+    border: 2px solid transparent;
+}
+.Additional-bottom-btn .btn:hover {
+    background: #fff;
+    border: 2px solid #000;
+    color: #000;
+}
+.Additional-box p {
+    margin-bottom: 43px;
+}
+.general-form form input, .general-form form select {
+    background: #fff;
+    font-weight: 300;
+}
+.general-form form .form-div label, .general-form form .form-div label {
+  font-size: 28px;
+}
+
+.general-form .form-div {
+    margin-bottom: 40px;
+}
+.card.card-par p {
+    text-align: right;
+    margin-bottom: 0;
+}   
+label.last-name {
+    opacity: 0;
+}
+
+
 
 
 @media (max-width:1440px){
