--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -818,6 +818,7 @@ label.last-name {
 label p {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
+    text-align: left !important;
 }
 .sub-btn input[type="radio"] {
     opacity: 0;
@@ -839,6 +840,7 @@ label p {
   .sub-btn label:hover {
     border: 2px solid #000;
     background: #81C14B;
+
 }
 
 select {
@@ -863,6 +865,18 @@ select {
     padding-left: 25px;
 }
 }
+@media (max-width:1080px){
+    .information .information-header {
+        padding: 64px 20px;
+    }
+    .information .information-icon-box .information-cricle-box {
+        width: 95px;
+        height: 95px;
+    }
+    .information-cricle-box:after {
+        width: 70px;
+    }
+}
 @media (max-width:991px){
     .login-img {
         position: unset;
@@ -870,5 +884,29 @@ select {
     .login-img img {
         width: 100%;
         margin-top: 70px;
+    }
+    .Additional h2 {
+        font-size: 40px;
+        line-height: 42px;
+    }
+    h1, .h1{ 
+        font-size: 48px;
+        line-height: 52px;
+    }
+    p {
+        font-size: 16px;
+    }
+    label, label p {
+        font-size: 17px !important;
+    }
+    .information .information-icon-box .information-cricle-box {
+        margin-bottom: 20px;
+    }
+    .card p {
+        font-size: 20px;
+        line-height: 28px;
+    }
+    .Additional-bottom-btn {
+        margin-top: 60px;
     }
 }
