--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -832,17 +832,22 @@ label p {
   .sub-btn label {
       display: inline-block;
       background-color: #fff;
-      padding: 12px 70px;
+      padding: 13px 70px;
       font-family: sans-serif, Arial;
       font-size: 16px;
       /* border: 2px solid #444; */
       border-radius: 4px;
       box-shadow: inset 0 0 10px #fff;
-      border: 2px solid transparent;
+      border: 4px solid transparent;
   }
-  .sub-btn label.active {
-    border: 2px solid #000;
+  .sub-btn label.active, .sub-btn label:hover {
+    border: 4px solid #fff;
     background: #81C14B;
+    border-radius: 6px;
+}
+.information .information-icon-box .information-cricle-box.active, .information .information-icon-box .information-cricle-box:hover {
+    background: transparent;
+    border: 5px solid #81C14B;
 }
 
 select {
@@ -854,6 +859,56 @@ select {
   padding-top: 70px;
   padding-bottom: 70px;
 }
+
+
+
+/************************ homeform **********************/
+
+.bg-homeform {
+
+    background: url(../images/home-img.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.checkbox-custom {
+    opacity: 0;
+    position: absolute;   
+}
+
+.checkbox-custom, .checkbox-custom-label {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.checkbox-custom + .checkbox-custom-label:before {
+    content: '';
+    background: #fff;
+    border-radius: 5px;
+    border: 2px solid #ddd;
+    display: inline-block;
+    vertical-align: middle;
+    width: 80px;
+    height: 30px;
+    padding: 2px;
+    margin-right: 10px;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width:1440px){
     .login-img img {
