--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -77,8 +77,11 @@ input{
 }
 
 /* Transparent Header Start  */
-.bg-home{
+.home-banner{
     background:url("../images/home_img1.png");
+}
+.bg-home-form{
+    background:url("../images/home-img.png");
 }
 .nav-items{
     display: none;
@@ -101,6 +104,9 @@ input{
 
 .site-header {
     background-color: #fff;
+}
+.hamburger, .close-icon{
+    z-index: 999;
 }
 /* Transparent Header End */
 
