--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1439,3 +1439,40 @@ select {
         background-position: 95% center;
     }
 }
+
+
+
+/* Range Slider Start */
+
+
+.custom-range {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 30px;
+    border-radius: 30px !important;
+    background: linear-gradient(to right, #c0dfa4, #fa772f);
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+    border-width: 5px; 
+    border-color: #ffffff; 
+    border-style: solid ; 
+  }
+  .custom-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px; 
+    height: 40px; 
+    background: #ffffff;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
+  .custom-range::-moz-range-thumb {
+    width: 40px; 
+    height: 40px;
+    background: #ffffff; 
+    cursor: pointer;
+  }
+  
+/* Range Slider End */
